fix grid alignment

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -133,11 +133,8 @@ $black: #333;
 .grid {
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center; 
-  align-items: center; 
+  align-items: flex-start; 
   grid-gap: 16px; 
-  // margin-top: 72px;
-
   padding: 16px; 
 
   @include breakpoint (sm){
